--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- fontawesome  -->
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/regular.min.css" />
+    <!-- goggle font  -->
+
+
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    hello
+    <!-- ......................header  -->
+    <section class="navbar">
+        <div class="container">
+            <div class="nav-flx">
+                <div class="logo-imge">
+                    <img src="image/6408461.jpg" alt="logo">
+                </div>
+                <div class="nav-list">
+                    <div class="icon">
+                        <i class="fab fa-whatsapp"></i>
+                        <h3>02784847496</h3>
+                    </div>
+                    <!-- button login -->
+                    <div class="login ">
+                        <button class="login-butn">
+                            LOG IN
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="book-txt">
+                <h1>Book Your Laundary Pick Up In 1 Minute</h1>
+                <h6>Contrary to popular belief, Lorem Ipsum is not simply random text. </h6>
+                <div class="boknow">
+                    <button class="booknow-butn">
+                        <h4>BOOK NOW</h4>
+                    </button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- --------------------------banner  -->
+    <section class="banner">
+        <div class="container">
+            <div class="banner-flx">
+                <h2>Book Our Service</h2>
+
+            </div>
+            <div class="foursection-flx">
+
+                <div class="wash-fold-colu">
+                    <div class="icn-flx">
+                        <div class="crcle">
+                            <div class="icon-washing">
+                                <i class="fal fa-washer"></i>
+                            </div>
+                        </div>
+                        <div class="crcle">
+                            <div class="icon-washing">
+                                <i class="fal fa-washer"></i>
+                            </div>
+                        </div>
+                    </div>
+<div class="imagee">
+<img src="image/11161.jpg" alt="washing">
+</div>
+
+
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
