term and faq page

--- a/404.html
+++ b/404.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/regular.min.css" />
+
     <title>404 Error</title>
   </head>
   <body>
     <section class="main-404">
+      <div class="container">
+        <div class="nav-flx">
+          <div class="logo-imge">
+            <img src="image/6408461.jpg" alt="logo" />
+          </div>
+          <div class="nav-list">
+            <div class="icon">
+              <i class="fab fa-whatsapp"></i>
+              <h3>02784847496</h3>
+            </div>
+            <!-- button login -->
+            <div class="login">
+              <button class="login-butn">LOG IN</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="er-404">
         <div class="error-404">
           <h1>404</h1>
