--- a/terms.html
+++ b/terms.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/regular.min.css" />
 
-    <title>privacy policy</title>
+    <title>Terms and Conditions</title>
   </head>
   <body>
-    <section class="policy">
+    <section class="terms">
       <div class="container">
         <div class="nav-flx">
           <div class="logo-imge">
@@ -29,11 +29,11 @@
           </div>
         </div>
       </div>
-      <div class="privacy-policy">
-        <h1>Privacy Policy</h1>
+      <div class="terms-condition">
+        <h1>Terms & Conditions</h1>
       </div>
     </section>
-    <section class="policy-info">
+    <section class="terms-info">
       <div class="info-container">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla esse
