--- a/index.html
+++ b/index.html
@@ -54,29 +54,121 @@
                 <h2>Book Our Service</h2>
 
             </div>
-            <div class="foursection-flx">
+            <!-- blue box   -->
+            <div class="fourbox-flx">
+                <!-------------------------------- box 1 -->
+                <div class="firstboox">
+                    <div class="first-box">
 
-                <div class="wash-fold-colu">
-                    <div class="icn-flx">
-                        <div class="crcle">
-                            <div class="icon-washing">
-                                <i class="fal fa-washer"></i>
+                        <div class="crcle-flx">
+                            <div class="circle-wth">
+                                <div class="icon-washing">
+                                    <i class="fal fa-washer"></i>
+                                </div>
+                            </div>
+                            <div class="circle-wth2">
+                                <div class="icon-washing2">
+                                    <i class="fal fa-washer"></i>
+                                </div>
                             </div>
                         </div>
-                        <div class="crcle">
-                            <div class="icon-washing">
-                                <i class="fal fa-washer"></i>
-                            </div>
+                        <!-- -------------------------------------image  -->
+                        <div class="box-imag">
+                            <img src="image/wahing-machine.png" alt="washcloth">
+                        </div>
+                        <div class="wash-txt">
+                            <h2>Wash & Fold</h2>
+                            <p>All you laundary wash,<br> dried and folded (no ironing) </p>
+
                         </div>
                     </div>
-<div class="imagee">
-<img src="image/11161.jpg" alt="washing">
-</div>
+                    <button class="button">350 AED</button>
+                </div>
+                <!-- -------------------------------------box2  -->
+                <div class="firstboox">
+                    <div class="first-box">
 
+                        <div class="crcle-flx">
+                            <div class="circle-wth">
+                                <div class="icon-washing">
+                                    <i class="fal fa-washer"></i>
+                                </div>
+                            </div>
+                            <div class="circle-wth2">
+                                <div class="icon-washing2">
+                                    <i class="fal fa-washer"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- -------------------------------------image  -->
+                        <div class="box-imag">
+                            <img src="image/wahing-machine.png" alt="washcloth">
+                        </div>
+                        <div class="wash-txt">
+                            <h2>Wash & Fold</h2>
+                            <p>All you laundary wash,<br> dried and folded (no ironing) </p>
 
+                        </div>
+                    </div>
+                    <button class="button">350 AED</button>
+                </div>
+
+<!-- -------------------------------------box2  -->
+<div class="firstboox">
+    <div class="first-box">
+
+        <div class="crcle-flx">
+            <div class="circle-wth">
+                <div class="icon-washing">
+                    <i class="fal fa-washer"></i>
+                </div>
+            </div>
+            <div class="circle-wth2">
+                <div class="icon-washing2">
+                    <i class="fal fa-washer"></i>
                 </div>
             </div>
         </div>
+        <!-- -------------------------------------image  -->
+        <div class="box-imag">
+            <img src="image/wahing-machine.png" alt="washcloth">
+        </div>
+        <div class="wash-txt">
+            <h2>Wash & Fold</h2>
+            <p>All you laundary wash,<br> dried and folded (no ironing) </p>
+
+        </div>
+    </div>
+    <button class="button">350 AED</button>
+</div>
+<!-- -------------------------------------box2  -->
+<div class="firstboox">
+    <div class="first-box">
+
+        <div class="crcle-flx">
+            <div class="circle-wth">
+                <div class="icon-washing">
+                    <i class="fal fa-washer"></i>
+                </div>
+            </div>
+            <div class="circle-wth2">
+                <div class="icon-washing2">
+                    <i class="fal fa-washer"></i>
+                </div>
+            </div>
+        </div>
+        <!-- -------------------------------------image  -->
+        <div class="box-imag">
+            <img src="image/wahing-machine.png" alt="washcloth">
+        </div>
+        <div class="wash-txt">
+            <h2>Wash & Fold</h2>
+            <p>All you laundary wash,<br> dried and folded (no ironing) </p>
+
+        </div>
+    </div>
+    <button class="button">350 AED</button>
+</div>
     </section>
 </body>
 
