--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <div class="book-txt">
                 <h1>Book Your Laundary Pick Up In 1 Minute</h1>
                 <h6>Contrary to popular belief, Lorem Ipsum is not simply random text. </h6>
-                <div class="boknow">
+                  <a href="order.html"><div class="boknow">
                     <button class="booknow-butn">
-                        <h4>BOOK NOW</h4>
+                      <h4>BOOK NOW</h4>
                     </button>
-                </div>
+                </div></a>
 
             </div>
         </div>
