--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <h3>02784847496</h3>
                     </div>
                     <!-- button login -->
+                   
                     <div class="login ">
                         <button class="login-butn">
                             LOG IN
@@ -38,11 +39,13 @@
             <div class="book-txt">
                 <h1>Book Your Laundary Pick Up In 1 Minute</h1>
                 <h6>Contrary to popular belief, Lorem Ipsum is not simply random text. </h6>
-                  <a href="order.html"><div class="boknow">
-                    <button class="booknow-butn">
-                      <h4>BOOK NOW</h4>
-                    </button>
-                </div></a>
+                <a href="order.html">
+                    <div class="boknow">
+                        <button class="booknow-butn">
+                            <h4>BOOK NOW</h4>
+                        </button>
+                    </div>
+                </a>
 
             </div>
         </div>
@@ -113,62 +116,71 @@
                     <button class="button">350 AED</button>
                 </div>
 
-<!-- -------------------------------------box2  -->
-<div class="firstboox">
-    <div class="first-box">
+                <!-- -------------------------------------box2  -->
+                <div class="firstboox">
+                    <div class="first-box">
 
-        <div class="crcle-flx">
-            <div class="circle-wth">
-                <div class="icon-washing">
-                    <i class="fal fa-washer"></i>
-                </div>
-            </div>
-            <div class="circle-wth2">
-                <div class="icon-washing2">
-                    <i class="fal fa-washer"></i>
-                </div>
-            </div>
-        </div>
-        <!-- -------------------------------------image  -->
-        <div class="box-imag">
-            <img src="image/wahing-machine.png" alt="washcloth">
-        </div>
-        <div class="wash-txt">
-            <h2>Wash & Fold</h2>
-            <p>All you laundary wash,<br> dried and folded (no ironing) </p>
+                        <div class="crcle-flx">
+                            <div class="circle-wth">
+                                <div class="icon-washing">
+                                    <i class="fal fa-washer"></i>
+                                </div>
+                            </div>
+                            <div class="circle-wth2">
+                                <div class="icon-washing2">
+                                    <i class="fal fa-washer"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- -------------------------------------image  -->
+                        <div class="box-imag">
+                            <img src="image/wahing-machine.png" alt="washcloth">
+                        </div>
+                        <div class="wash-txt">
+                            <h2>Wash & Fold</h2>
+                            <p>All you laundary wash,<br> dried and folded (no ironing) </p>
 
-        </div>
-    </div>
-    <button class="button">350 AED</button>
-</div>
-<!-- -------------------------------------box2  -->
-<div class="firstboox">
-    <div class="first-box">
-
-        <div class="crcle-flx">
-            <div class="circle-wth">
-                <div class="icon-washing">
-                    <i class="fal fa-washer"></i>
+                        </div>
+                    </div>
+                    <button class="button">350 AED</button>
                 </div>
-            </div>
-            <div class="circle-wth2">
-                <div class="icon-washing2">
-                    <i class="fal fa-washer"></i>
-                </div>
-            </div>
-        </div>
-        <!-- -------------------------------------image  -->
-        <div class="box-imag">
-            <img src="image/wahing-machine.png" alt="washcloth">
-        </div>
-        <div class="wash-txt">
-            <h2>Wash & Fold</h2>
-            <p>All you laundary wash,<br> dried and folded (no ironing) </p>
+                <!-- -------------------------------------box2  -->
+                <div class="firstboox">
+                    <div class="first-box">
 
+                        <div class="crcle-flx">
+                            <div class="circle-wth">
+                                <div class="icon-washing">
+                                    <i class="fal fa-washer"></i>
+                                </div>
+                            </div>
+                            <div class="circle-wth2">
+                                <div class="icon-washing2">
+                                    <i class="fal fa-washer"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- -------------------------------------image  -->
+                        <div class="box-imag">
+                            <img src="image/wahing-machine.png" alt="washcloth">
+                        </div>
+                        <div class="wash-txt">
+                            <h2>Wash & Fold</h2>
+                            <p>All you laundary wash,<br> dried and folded (no ironing) </p>
+
+                        </div>
+                    </div>
+                    <button class="button">350 AED</button>
+                </div>
+    </section>
+    <!-- sectioon  -->
+    <section class="footer">
+        <div class="container">
+            <div class="foot-but">
+                <a href="404.html">404 page</a>
+                <a href="policy.html">policy</a>
+            </div>
         </div>
-    </div>
-    <button class="button">350 AED</button>
-</div>
     </section>
 </body>
 
