--- a/order.html
+++ b/order.html
@@ -49,6 +49,11 @@
             <li class="cirtwo"></li>
             <li class="cirtri"></li>
           </ul>
+          <div class="dot-text">
+            <p>date & time</p>
+            <p>Address</p>
+            <p>Payment</p>
+          </div>
         </div>
       </div>
     </section>
