--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <h3>02784847496</h3>
                     </div>
                     <!-- button login -->
-                   
+
                     <div class="login ">
                         <button class="login-butn">
                             LOG IN
@@ -88,7 +88,7 @@
                     <button class="button">350 AED</button>
                 </div>
                 <!-- -------------------------------------box2  -->
-                <div class="firstboox">
+                <div class="second-box">
                     <div class="first-box">
 
                         <div class="crcle-flx">
@@ -113,11 +113,11 @@
 
                         </div>
                     </div>
-                    <button class="button">350 AED</button>
+                    <button class="button2">350 AED</button>
                 </div>
 
                 <!-- -------------------------------------box2  -->
-                <div class="firstboox">
+                <div class="third-box">
                     <div class="first-box">
 
                         <div class="crcle-flx">
@@ -142,10 +142,10 @@
 
                         </div>
                     </div>
-                    <button class="button">350 AED</button>
+                    <button class="button3">350 AED</button>
                 </div>
-                <!-- -------------------------------------box2  -->
-                <div class="firstboox">
+                <!-- -------------------------------------box3  -->
+                <div class="fourth-box">
                     <div class="first-box">
 
                         <div class="crcle-flx">
@@ -170,7 +170,7 @@
 
                         </div>
                     </div>
-                    <button class="button">350 AED</button>
+                    <button class="button4">350 AED</button>
                 </div>
     </section>
     <!-- sectioon  -->
@@ -229,7 +229,7 @@
 
 
 
-    
+
     <section class="footer">
         <div class="container">
             <div class="foot-but">
