--- a/index.html
+++ b/index.html
@@ -173,13 +173,178 @@
                     <button class="button4">350 AED</button>
                 </div>
     </section>
-    <!-- sectioon  -->
+    <!-------------------------------------------- secttion 3 -->
+    <section class="sub-banner">
+        <div class="container">
+            <div class="sub-banner-flx">
+                <div class="machine-imag">
+                    <img src="image/wahing-machine.png" alt="machine">
+                </div>
+                <div class="schedule-txt">
 
+                    <p>schedule Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                        Accusantium tempore, impedit vitae pariatur aspernatur similique
+                        quod officiis magni molestias praesentium ea quia, asperiores
+                        reiciendis voluptate repellendus omnis excepturi optio dicta ipsum.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                        Accusantium tempore, impedit vitae pariatur aspernatur similique
+                        quod officiis magni molestias praesentium ea quia, asperiores
+                        reiciendis voluptate repellendus omnis excepturi optio dicta ipsum.</p>
+                    <div class="information">
+                        <p>schedule Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <div class="informtion-box">
+                            <h4>Information</h4>
+                            <h3>350 AD</h3>
+                        </div>
+                        <div class="informtion-box">
+                            <div class="text-color">
+                                <h4>Color slip accordingly</h4>
+                                <h5>No color bleeds</h5>
+                            </div>
 
+                            <div class="sign-direction"><i class="fad fa-map-signs"></i></div>
 
+                        </div>
+                        <div class="informtion-box">
+                            <div class="text-color">
+                                <h4>Color slip accordingly</h4>
+                                <h5>No color bleeds</h5>
+                            </div>
+                            <div class="sign-direction">
+                                <i class="fas fa-ufo"></i>
+                            </div>
+                        </div>
+                        <div class="informtion-box">
+                            <div class="text-color">
+                                <h4>Color slip accordingly</h4>
 
+                            </div>
+                        </div>
+                        <div class="informtion-box">
+                            <div class="text-color">
+                                <h4>Color slip accordingly</h4>
 
+                            </div>
+                        </div>
+                        <!-- BUTTON  -->
+                        <div class="buttn-two">
+                            <button class="booknow-butn-two">
+                                <h4>BOOK NOW</h4>
+                            </button>
+                        </div>
 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--------------------------------------------------------------- book service 3 eye steps  -->
+    <section class="curv-backimage">
+        <div class="container">
+            <div class="eye-step">
+                <h2>Book Services In 3 Eyes Steps</h2>
+
+            </div>
+            <div class="tree-imag-flxx">
+
+                <div class="imag-ttext">
+                    <!-- white circle  -->
+                    <div class="white-circle">
+                        <!-- blue circle  -->
+                        <div class="smal-crcle">
+                            <div class="zero-one">
+                                <h1>01</h1>
+                            </div>
+
+                        </div>
+                        <div class="frst-iimage">
+                            <img src="image/image_2023_09_13T07_33_19_235Z.png" alt="">
+                        </div>
+                    </div>
+                    <!-- request for pick  -->
+                    <div class="requst">
+                        <h2>Request for pick up</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Accusantium tempore, impedit vitae pariatur aspernatur similique
+                            quod officiis magni molestias praesentium ea quia, asperiores
+                            reiciendis</p>
+                    </div>
+
+                </div>
+                <!-- ---------------------------second image text  -->
+                <div class="imag-ttext">
+                    <!-- white circle  -->
+                    <div class="white-circle">
+                        <!-- blue circle  -->
+                        <div class="smal-crcle">
+                            <div class="zero-one">
+                                <h1>02</h1>
+                            </div>
+
+                        </div>
+                        <div class="frst-iimage">
+                            <img src="image/image_2023_09_13T07_33_19_235Z.png" alt="">
+                        </div>
+                    </div>
+                    <!-- request for pick  -->
+                    <div class="requst">
+                        <h2>Request for pick up</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Accusantium tempore, impedit vitae pariatur aspernatur similique
+                            quod officiis magni molestias praesentium ea quia, asperiores
+                            reiciendis</p>
+                    </div>
+
+                </div>
+
+                <!-- ---------------------------third image text  -->
+                <div class="imag-ttext">
+                    <!-- white circle  -->
+                    <div class="white-circle">
+                        <!-- blue circle  -->
+                        <div class="smal-crcle">
+                            <div class="zero-one">
+                                <h1>03</h1>
+                            </div>
+
+                        </div>
+                        <div class="frst-iimage">
+                            <img src="image/image_2023_09_13T07_33_19_235Z.png" alt="">
+                        </div>
+                    </div>
+                    <!-- request for pick  -->
+                    <div class="requst">
+                        <h2>Request for pick up</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Accusantium tempore, impedit vitae pariatur aspernatur similique
+                            quod officiis magni molestias praesentium ea quia, asperiores
+                            reiciendis</p>
+                    </div>
+
+                </div>
+            </div>
+            <!-- button3  -->
+            <div class="buttn-thre">
+                <button class="booknow-butn-thre">
+                    <h4>BOOK NOW</h4>
+                </button>
+            </div>
+
+        </div>
+    </section>
+
+<!----------------------------------------------------------------- OUR FEATURES  -->
+<section class="features">
+    <div class="container">
+        <div class="our">
+            <h2>Our Features</h2>
+        </div>
+        <div class="frature-flx">
+            <div class="trested-flx"></div>
+        </div>
+    </div>
+</section>
 
 
 
